--- a/blog/static/main.css
+++ b/blog/static/main.css
@@ -78,4 +78,15 @@
     text-decoration: none;
     }
     
-   
+    .article-svg {
+    width: 25px;
+    height: 25px;
+    vertical-align: middle;
+    }
+    
+    .account-heading {
+    font-size: 2.5rem;
+    }
+    footer {
+    background-color: #428bca;
+    }
