--- a/blog/templates/design.html
+++ b/blog/templates/design.html
@@ -24,7 +24,7 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-                <a class="navbar-brand mr-4" href="/">Amazing Blog</a>
+                <a class="navbar-brand mr-4" href="/">Blessed Assurance Blog</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
                         <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
-                        <!-- <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a> -->
+                        
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
@@ -65,8 +65,7 @@
         </div>
         {% block content %}{% endblock %}
     </main>
-        <!-- Footer block  -->
-        {% block footer %} {% include 'footer.html' %} {% endblock %}
+        
 
 
 
@@ -82,6 +81,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+        
 </body>
-
+<br><br><br><br><br><br><br><br><br><br>
+<!-- Footer block  -->
+{% block footer %} {% include 'footer.html' %} {% endblock %}
 </html>
