--- a/blog/templates/footer.html
+++ b/blog/templates/footer.html
@@ -2,11 +2,11 @@
     <div class="container">
     <ul class="list-unstyled list-inline text-center py-2">
         <li class="list-inline-item">
-        <h5 class="mb-1"><em>The blog abroad</em></h5>
+        <h5 class="mb-1"><em>Blessed Blog</em></h5>
         </li>
     </ul>
     </div>
     <div class="footer-copyright text-center py-3">
-    © 2020 Copyright:
+    © Vincent 2020 Copyright:
     </div>
 </footer>
