--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -8,7 +8,7 @@
     }
 </style>
 <div class="container quotes">
-        <h1 class="text-center">The Blog Abroad</h1>
+        <h1 class="text-center">Blessed Blog (BA)</h1>
     <div class="m-5">
         <blockquote class="quote-box text-center primary-color">
             <p class="quotation-mark">
