--- a/blog/templates/footer.html
+++ b/blog/templates/footer.html
@@ -7,6 +7,6 @@
     </ul>
     </div>
     <div class="footer-copyright text-center py-3">
-    © Kilitasha 2020 Copyright:
+    © Kilitasha Copyright:
     </div>
 </footer>
